# recon

./: Cargo.toml  SKILL.md  project.intent.md
docs/plans/: roadmap.md
docs/research/: 2026-03-25-prompt-injection-defense.md  2026-03-25-recon-cli-brainstorm.md  2026-03-25-recon-competitive-landscape.md
examples/: briefing.toml
src/: cache.rs  check.rs  cli.rs  config.rs  diff.rs  error.rs  init.rs  lib.rs  main.rs  model.rs  output.rs  runner.rs  store.rs
src/exec/: file.rs  shell.rs
tests/: integration.rs
