[package]
name = "recon"
version = "0.2.0"
edition = "2024"
description = "Agent-first context aggregator — pluggable reconnaissance for AI coding agents"
license = "MIT"
repository = "https://github.com/heurema/recon"
keywords = ["cli", "recon", "agents", "context", "productivity"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "time", "fs", "io-util", "signal"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
libc = "0.2"
tempfile = "3"
thiserror = "2"
which = "7"
rusqlite = { version = "0.39", features = ["bundled"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
